Make Seattleu link clickable to lead to home page in _Layout.cshtml
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/xKo4rrvSe0KccP3ieGZuZmQAHU_W?Type=TaskLink&Channel=Link&CreatedTime=637266403855550000

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -14,10 +14,12 @@
         <!-- Our custom built header class. -->
 
         <div class="reuse-header">
-            <div class="header-image">
-                <img src="https://www.seattleu.edu/media/marketing-communications/branding/spirit-marks/marcom-spirit-marks/SeattleUMain-red-background.png"
-                     height="65">
-            </div>
+            <a href="../Index">
+                <div class="header-image">
+                    <img src="https://www.seattleu.edu/media/marketing-communications/branding/spirit-marks/marcom-spirit-marks/SeattleUMain-red-background.png"
+                         height="65">
+                </div>
+            </a>
             <div class="header-title">
                 ReuseSU
             </div>
