Make ReuseSU link in header clickable in _Layout.cshtml
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/xKo4rrvSe0KccP3ieGZuZmQAHU_W?Type=TaskLink&Channel=Link&CreatedTime=637266403855550000

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -20,9 +20,11 @@
                          height="65">
                 </div>
             </a>
-            <div class="header-title">
-                ReuseSU
-            </div>
+            <a href="..Index">
+                <div class="header-title">
+                    ReuseSU
+                </div>
+            </a>
             <div class="header-motto">
                 Simple, sustainable sharing
                 <a class="btn btn-outline-dark header-logout" asp-area="" asp-page="/browsingStudent">Logout</a>
