--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                          height="65">
                 </div>
             </a>
-            <a href="..Index">
+            <a href="..Index" style="color:black;">
                 <div class="header-title">
                     ReuseSU
                 </div>
