Un-italicized text of modal, home https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/L3rYUdpCdk25VPhg7R3_yWQALrmS?Type=TaskLink&Channel=Link&CreatedTime=637264021103400000

--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -118,7 +118,7 @@
                 </div>
                 <br />
                 <!-- body -->
-                <div class="modal-body-small-it">
+                <div class="modal-body">
                     <p>Thanks for flagging and doing your part to keep the community safe and focused on doing what it does best. The post has been removed!</p>
                 </div>
 
