--- a/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
+++ b/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
@@ -65,7 +65,7 @@
 <div id="flagging-modal" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
-            
+
             <div class="modal-header">
             </div>
 
@@ -115,25 +115,46 @@
 </div>
 
 
-<!-- HELP TEXT MODAL -->
-<div class="modal fade right" id="flagging-help-text" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
+<!-- FLAGGING CONFIRMATION MODAL -->
+<div id="flagging-help-text" class="modal fade in">
+    <div class="modal-dialog">
+        <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
 
-    <div class="modal-dialog modal-side modal-top-right" role="document">
+            <!-- Decorative header -->
+            <div class="modal-header"></div>
 
-
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2>Questions about flagging?</h2>
-            </div>
             <div class="modal-body">
-                <p><b>What is flagging:</b> Flagging something will remove the item from view as soon as you flag it.</p>
-                <p><b>When to flag:</b> You should flag items if and only if it does not adhere to the <em>posting policy</em>.</p>
-                <p><b>Flagging is anonymous:</b> The poster will not know who flagged their item. Only site admins can.</p>
+
+                <!-- Title, despite the description -->
+                <div class="reuse-mod-body">
+                    <em>Questions about flagging?</em>
+                </div>
+                <br />
+                <!-- body -->
+                <div class="modal-body">
+                    <p><b>What is flagging:</b> Flagging something will remove the item from view as soon as you flag it.</p>
+                    <p><b>When to flag:</b> You should flag items if and only if it does not adhere to the <em>posting policy</em>.</p>
+                    <p><b>Flagging is anonymous:</b> The poster will not know who flagged their item. Only site admins can.</p>
+                </div>
+
+                <br />
+
+                <!-- Continue button -->
+                <div class="modal-buttons">
+                    <div class="modal-button-container">
+                        <button type="button" style="font-size:large;" class="btn btn-outline-dark modal-button"
+                                data-dismiss="modal">
+                            Done
+                        </button><br />
+                    </div>
+                </div>
+
+                <br />
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Thanks</button>
-            </div>
+
+            <!-- Decorative footer-->
+            <div class="modal-footer"></div>
+
         </div>
     </div>
 </div>
