--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -107,14 +107,14 @@
     display: inline-block;
 
 }
-
+/*
 .modal-body-checkbox {
     padding-top: 5px;
     font-size: 16px;
     display: table-cell;
     width: auto;
 }
-
+    */
 .modal-tutorial-img {
     display: block;
     margin-left: auto;
