Formatting to get rid of italics, bad left alignment https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/L3rYUdpCdk25VPhg7R3_yWQALrmS?Type=TaskLink&Channel=Link&CreatedTime=637264021103400000

--- a/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
+++ b/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
@@ -72,24 +72,24 @@
             <div class="modal-body">
 
                 <div class="reuse-mod-body">
-                    Flagging: 'Apple Earbuds'<br />
+                    Flagging: 'Factory Fresh Apple Earbuds, get them quick!'<br />
                 </div>
                 <br />
-                <div class="modal-body-small-it" style="text-align: left;">
-                    <h4><em style="margin-left: 110px;">Are you sure you want to flag 'Apple Earbuds'?</em></h4>
-                    <ul style="margin-left: 110px;">
+                <div class="modal-body" style="text-align: left; padding-left: 100px;">
+                    <h4>Are you sure you want to flag this post?</h4>
+                    <ul>
                         <li>Flagging is effective immediately and will remove the item as soon as you flag it.</li>
                         <li>You should flag items if and only if they do not adhere to the <em>posting policy</em></li>
                         <li>Flagging is anonymous and the poster will not know who flagged their item.</li>
                     </ul>
-                    <div class="modal-body-checkbox">
+
                         <h4>Why are you flagging?</h4>
                         <div class="checkbox"><input type="checkbox" />&nbsp;The item has been posted multiple times</div>
                         <div class="checkbox"><input type="checkbox" />&nbsp;The user is requesting payment for this item</div>
                         <div class="checkbox"><input type="checkbox" />&nbsp;The item is no longer available</div>
                         <div class="checkbox"><input type="checkbox" />&nbsp;The item is inappropriate or explicit</div>
                         <div class="checkbox"><input type="checkbox" />&nbsp;The item violates the <em>posting policy</em> in another way</div>
-                    </div>
+
                 </div>
                 <br />
                 <br />
