--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -110,6 +110,7 @@
 /*
 .modal-body-checkbox {
     padding-top: 5px;
+    padding-left: 100px;
     font-size: 16px;
     display: table-cell;
     width: auto;
