Changed ordering of listings, browsingStudent https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/74tIViotDUy01IatA-VNWWQAOVEk?Type=TaskLink&Channel=Link&CreatedTime=637266583403950000

--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -46,10 +46,10 @@
 
         <!-- Same first item on Index page, Elena's chair is not visible! -->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
-            <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
-            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
-            <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
+            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
+            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
+            <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
+            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
         </div>
 
         <!-- Darren's post from Daniel's Scenario -->
@@ -60,18 +60,22 @@
             <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
         </div>
 
+        <!-- Sample Post iPhone-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/item_tablet_thumbnail.jpg"></div>
-            <div class="listing-item-title" style="float:left">iPhone 5se, some scratches, works fine</div>
+            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
+            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
-            <div class="listing-item-text">iPhone 5se, an upgraded version of the last small iPhone model. Works fine. Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+            <div class="listing-item-text">
+                iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]
+            </div>
         </div>
 
+        <!-- Sample Post End Table-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
-            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
-            <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
-            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
+            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
+            <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
+            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
+            <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
         </div>
 
     </main>
