Changed ordering of listings, home page https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/74tIViotDUy01IatA-VNWWQAOVEk?Type=TaskLink&Channel=Link&CreatedTime=637266583403950000

--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -63,21 +63,6 @@
     <main role="main" class="pb-3">
 
         <!-- Newly created listing for Elena's Chair scenario item -->
-
-        <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
-            <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
-            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
-            <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
-        </div>
-
-        <div class="listing">
-            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
-            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
-            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
-            <div class="listing-item-text">iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
-        </div>
-
         <div class="listing">
             <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
@@ -85,6 +70,23 @@
             <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
         </div>
 
+        <!-- Sample Post iPhone-->
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
+            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
+            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
+            <div class="listing-item-text">iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+        </div>
+
+        <!-- Sample Post End Table-->
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
+            <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
+            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
+            <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
+        </div>
+
+        <!-- Sample Post Succulents-->
         <div class="listing">
             <div class="listing-img"><img src="~/img/succulents.PNG"></div>
             <div class="listing-item-title" style="float:left">Four mini fake cacti/succulents!!</div>
