Changed checkbox styles and margins to prevent if from floating off modal, site.css https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/DxRIG_tLxk-Wa_6NYgpJmGQAMiWY?Type=TaskLink&Channel=Link&CreatedTime=637266666053720000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -441,9 +441,10 @@
 }
 
 .create-post-checkbox {
-    transform: scale(1.2);
+    padding-left: 150px;
     font-size: 20px;
-    margin-bottom: 25px;
+    margin-left: 20px;
+    margin-bottom: 10px;
 }
 
 .create-post-photo-section {
