Changed checkbox styles to prevent it from floating off modal, create-post https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/DxRIG_tLxk-Wa_6NYgpJmGQAMiWY?Type=TaskLink&Channel=Link&CreatedTime=637266666053720000

--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -165,14 +165,16 @@
                     <em>Make a new post: 2 of 3</em>
                 </div>
                 <br />
-                <div class="modal-body-checkbox">
-                    <!-- checkboxes -->
-                    <div class="create-post-checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
-                    <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Decor</div>
-                    <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Books</div>
-                    <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Electronics</div>
-                    <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Misc</div>
+
+                <!-- checkboxes -->
+                <div class="create-post-checkbox">
+                    <div class="checkbox"><input type="checkbox" />&nbsp;Furniture</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;Decor</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;Books</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;Electronics</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;Misc</div>
                 </div>
+
                 <br />
                 <!-- Next button -->
                 <div class="modal-buttons">
@@ -185,7 +187,9 @@
                 </div>
 
             </div>
+
             <div class="modal-footer"></div>
+
         </div>
     </div>
 </div>
