Fix ReuseSU link in header to have correct link to index page in _Layout.cshtml
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Te0lHk-9j0OD9KGYc2XK42QAFWFp?Type=TaskLink&Channel=Link&CreatedTime=637266676989310000

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                          height="65">
                 </div>
             </a>
-            <a href="..Index" style="color:black;">
+            <a href="../Index" style="color:black;">
                 <div class="header-title">
                     ReuseSU
                 </div>
