Radio buttons now more centered, smaller text, create-post page https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/DxRIG_tLxk-Wa_6NYgpJmGQAMiWY?Type=TaskLink&Channel=Link&CreatedTime=637266684305460000

--- a/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
+++ b/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
@@ -28,10 +28,12 @@
 
         <!-- style on the sidebar-lower div is temporary-->
         <div class="sidebar-lower" style="width: 210px; height:300px; float: left; margin: 0px;">
-            <p class="lower-sidebar-text">for this post</p>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#flagging-modal">Flag</button>
-            <p class="help-text" data-toggle="modal" data-target="#flagging-help-text">|?| How does flagging work?</p>
+            <p class="lower-sidebar-text">For this post:</p>
+            <div class="sidebar-lower-buttons">
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#flagging-modal">Flag</button>
+                <p class="help-text" data-toggle="modal" data-target="#flagging-help-text">|?| How does flagging work?</p>
+            </div>
         </div>
 
     </div>
@@ -83,12 +85,12 @@
                         <li>Flagging is anonymous and the poster will not know who flagged their item.</li>
                     </ul>
 
-                        <h4>Why are you flagging?</h4>
-                        <div class="checkbox"><input type="checkbox" />&nbsp;The item has been posted multiple times</div>
-                        <div class="checkbox"><input type="checkbox" />&nbsp;The user is requesting payment for this item</div>
-                        <div class="checkbox"><input type="checkbox" />&nbsp;The item is no longer available</div>
-                        <div class="checkbox"><input type="checkbox" />&nbsp;The item is inappropriate or explicit</div>
-                        <div class="checkbox"><input type="checkbox" />&nbsp;The item violates the <em>posting policy</em> in another way</div>
+                    <h4>Why are you flagging?</h4>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;The item has been posted multiple times</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;The user is requesting payment for this item</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;The item is no longer available</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;The item is inappropriate or explicit</div>
+                    <div class="checkbox"><input type="checkbox" />&nbsp;The item violates the <em>posting policy</em> in another way</div>
 
                 </div>
                 <br />
