sidebar-lower div has extra div to hold buttons, factory-fresh-apple-airbuds https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Te0lHk-9j0OD9KGYc2XK42QAFWFp?Type=TaskLink&Channel=Link&CreatedTime=637266687746250000

--- a/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
+++ b/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
@@ -28,10 +28,12 @@
 
         <!-- style on the sidebar-lower div is temporary-->
         <div class="sidebar-lower" style="width: 210px; height:300px; float: left; margin: 0px;">
-            <p class="lower-sidebar-text">for this post</p>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#flagging-modal">Flag</button>
-            <p class="help-text" data-toggle="modal" data-target="#flagging-help-text">|?| How does flagging work?</p>
+            <p class="lower-sidebar-text">For this post:</p>
+            <div class="sidebar-lower-buttons">
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#flagging-modal">Flag</button>
+                <p class="help-text" data-toggle="modal" data-target="#flagging-help-text">|?| How does flagging work?</p>
+            </div>
         </div>
 
     </div>
