Style for sidebar-lower changed to center off-black button text, site.css https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Te0lHk-9j0OD9KGYc2XK42QAFWFp?Type=TaskLink&Channel=Link&CreatedTime=637266687746250000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -263,6 +263,11 @@
     margin-top: 10px;
     font-style: italic;
     font-weight: 600;
+    color: #222;
+}
+
+.sidebar-lower-buttons {
+    text-align: center;
 }
 
 .checkbox{
