Add stapler image to last item entry in browsingStudent.cshtml

--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -72,7 +72,7 @@
 
         <!-- Sample Post End Table-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
+            <div class="listing-img"><img src="~/img/stapler.jpg"></div>
             <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
             <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
             <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
