Update comment to reflect stapler instead of table in browsingStudent.cshtml
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637266698841630000

--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <!-- Sample Post End Table-->
+        <!-- Sample Post Stapler-->
         <div class="listing">
             <div class="listing-img"><img src="~/img/stapler.jpg"></div>
             <div class="listing-item-title" style="float:left">Awesome old Swingline 333 stapler</div>
