--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -214,18 +214,18 @@
                 <div class="modal-body-small-it">
                     <em>Make a new post: 3 of 3</em>
                 </div>
-                <br />
 
                 <!-- Photo Section -->
                 <div class="create-post-photo-section">
                     Add Photos
                     <img id="create-post-image" src="~/img/Herman-Miller-Aeron-Chair-Smaller.jpeg" />
-                    <button type="button" class="btn btn-outline-dark sidebar-upper-button" style="margin-top: 150px;">Upload Photo(s)</button><br />
+                    <button type="button" class="btn btn-outline-dark sidebar-upper-button" style="margin-top: 50px;">
+                        Upload Photo(s)
+                    </button>
                 </div>
 
                 <!--Text Input Section-->
                 <div class="create-post-text-section">
-
 
                     <!-- Title section-->
                     <div class="create-post-component">
@@ -243,7 +243,7 @@
 
                         <form action="#" method="post">
                             <textarea name="textarea" cols="40" rows="10">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.  Dimensions are approximately 17 x 24 x 42".
-                        </textarea>
+                            </textarea>
                         </form>
 
                     </div>
@@ -259,7 +259,7 @@
                     </div>
 
                 </div>
-                <br />
+                
                 <!-- Next button -->
                 <div class="modal-buttons">
                     <div class="modal-button-container">
