Add inches to dimensions in chair sample post in create-post.cshtml

--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -242,7 +242,7 @@
                         Description*
 
                         <form action="#" method="post">
-                            <textarea name="textarea" cols="40" rows="10">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.  Dimensions are approximately 17 x 24 x 42".
+                            <textarea name="textarea" cols="40" rows="10">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.  Dimensions are approximately 17" x 24" x 42".
                             </textarea>
                         </form>
 
