--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -202,6 +202,18 @@
     display: inline-block;
 }
 
+.modal-tutorial-img-3 {
+    float: left;
+    padding-left: 75px;
+    padding-top: 30px;
+}
+
+.modal-tutorial-text-3 {
+    padding-left: 50px;
+    padding-top: 30px;
+    display: inline-block;
+}
+
 .new-post-plus {
     display: inline-block;
     line-height: 40px;
