Update modal 3b (Finding & Viewing posts) to have correct content height so that all content is viewable on screen in Index.cshtml
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Bo6Pz4JJb0uMED3oYZ_kqmQAFs7P?Type=TaskLink&Channel=Link&CreatedTime=637266720309030000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -369,20 +369,20 @@
                 </div>
 
                 <div class="reusesu-table-row">
-                    <div class="modal-tutorial-img-2">
+                    <div class="modal-tutorial-img-3">
                         <img src="~/img/Tutorial_SearchBar.PNG" />
                     </div>
-                    <div class="modal-tutorial-text">
+                    <div class="modal-tutorial-text-3">
                         Use the <strong> search bar </strong>, located at the top of <br/>
                         the page, to look for items by <strong>keyword.</strong>  <br />
                     </div>
                 </div>
 
                 <div class="reusesu-table-row">
-                    <div class="modal-tutorial-img-2">
+                    <div class="modal-tutorial-img-3">
                         <img src="~/img/Tutorial_Filters.PNG" />
                     </div>
-                    <div class="modal-tutorial-text">
+                    <div class="modal-tutorial-text-3">
                         <br />
                         Use the checkboxes on the sidebar to <strong>filter items by category.</strong> <br />
                         You can also auto-select all categories using <strong>Select All</strong><br />
@@ -392,10 +392,10 @@
                 </div>
 
                 <div class="reusesu-table-row">
-                    <div class="modal-tutorial-img-2">
+                    <div class="modal-tutorial-img-3">
                         <img src="~/img/Tutorial_EmailFlagButtons.PNG" />
                     </div>
-                    <div class="modal-tutorial-text">
+                    <div class="modal-tutorial-text-3">
                         When viewing the details of another person's post, you can find <br />
                         post actions in the <strong>left sidebar</strong>.  This includes the <br />
                         options to <strong>email the poster</strong>, which will auto-generate<br />
