Decrease earbuds image size so it will better fit on factory-fresh-apple-airbuds page using site.css
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/ooZEKF-JD0KfGYCnvdZpSGQAPTr2?Type=TaskLink&Channel=Link&CreatedTime=637266728165240000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -361,8 +361,10 @@
 }
 
 .full-listing-image {
-    margin: 10px auto 10px;
+    margin: auto;
     display: block;
+    height: 285px;
+    width: 285px;
 }
 
 .listing-body-text {
